--- a/client/src/index.css
+++ b/client/src/index.css
@@ -23,4 +23,9 @@
   }
 }
 @tailwind components;
+@layer components {
+  .dash-link{
+    @apply text-sm font-medium text-gray-700 py-2 px-2 hover:bg-[#242526] hover:text-white hover:scale-105 rounded-md transition duration-150 ease-in-out;
+  }
+}
 @tailwind utilities;
