--- a/client/src/pages/Home/style.css
+++ b/client/src/pages/Home/style.css
@@ -204,7 +204,7 @@ th {
   top: 100%;
   left: auto;
   right: -15px;
-  z-index: 990;
+  z-index: 999 !important;
   border-radius: 3px;
   background: #fff;
   border: solid 1px #dfe3e8;
